Fixed last card style on small screens

--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -46,6 +46,9 @@
     flex-basis: calc(100% - 14px);
     margin: 10px auto;
   }
+  .char-container:last-of-type {
+    flex-basis: calc(100% - 20px);
+  }
   .star-wars-container {
     width: 95%;
   }
